--- a/source/dialogs/line-style/line-style-modal.html
+++ b/source/dialogs/line-style/line-style-modal.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4>Attribute</h4>
+                <h4>Line Style</h4>
             </div>
             <div class="modal-body text-center">
                 <form class="form-horizontal" action="" name="modalLineStyle">
@@ -71,8 +71,8 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button class='btn btn-default' ng-click='wiModal.onOkButtonClicked()'><span class="ok-16x16"></span>&nbsp;Ok</button>
-                <button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()' data-dismiss="modal"><span class="close-16x16"></span>&nbsp;Cancel</button>
+                <button class='btn btn-default' ng-click='wiModal.onOkButtonClicked()'><span class="ok-16x16"></span>&nbsp;Close</button>
+                <!-- <button class='btn btn-default' ng-click='wiModal.onCancelButtonClicked()' data-dismiss="modal"><span class="close-16x16"></span>&nbsp;Cancel</button> -->
             </div>
         </div>
     </div>
