--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -235,7 +235,7 @@
                                                 </td>
                                                 <td>
                                                     <input type="button" ng-model="selectCurve.lineStyle"
-                                                           class="form-control wi-form-control"
+                                                           value="Edit..." class="form-control wi-form-control"
                                                             ng-click="wiModal.lineStyleButtonClicked()">
                                                 </td>
                                                 <td>
