--- a/source/dialogs/curve-properties/curve-properties-modal.html
+++ b/source/dialogs/curve-properties/curve-properties-modal.html
@@ -26,7 +26,7 @@
                                     <label class="control-label col-sm-3" for="curveName"><span class=""></span>Name</label>
                                     <div class="col-sm-9">
                                         <input type="text" class="form-control wi-form-control"
-                                               value="" id="curveName" name="curveName" ng-model="wiModal.curveOptions.name" disabled>
+                                               value="" id="curveName" name="curveName" ng-model="wiModal.lineObjTemplate.name" disabled>
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -38,8 +38,8 @@
                                     </div>
                                 </div>
                                 <div class="checkShow">
-                                    <input type="checkbox" ng-model="showHeader" checked>Show header &nbsp;
-                                    <input type="checkbox" ng-model="showDataset">Show Dataset
+                                    <input type="checkbox" ng-model="wiModal.curveOptions.showHeader" checked>Show header &nbsp;
+                                    <input type="checkbox" ng-model="wiModal.curveOptions.showDataset">Show Dataset
                                 </div>
                                 <div class="scales">
                                     <h5>Scales</h5>
@@ -59,17 +59,17 @@
                                                    ng-model="wiModal.curveOptions.maxValue">
                                         </div>
                                     </div>
-                                    <input type="checkbox" ng-model="wiModal.curveOptions.autoScale">&nbsp;Auto value scales
+                                    <input type="checkbox" ng-model="wiModal.curveOptions.autoValueScale">&nbsp;Auto value scales
                                     <div class="form-group">
                                         <label class="control-label col-sm-5">Min Depth: </label>
                                         <div class="col-sm-7">
-                                            {{wiModal.curveOptions.minDepth}}
+                                            {{wiModal.lineObjTemplate.minDepth}}
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label class="control-label col-sm-5">Max Depth: </label>
                                         <div class="col-sm-7">
-                                            {{wiModal.curveOptions.maxDepth}}
+                                            {{wiModal.lineObjTemplate.maxDepth}}
                                         </div>
                                     </div>
                                 </div>
@@ -98,7 +98,7 @@
                                     <div class="form-group">
                                         <label class="control-label col-sm-5 normal-text">Wrap mode</label>
                                         <div class="col-sm-7">
-                                            <select ng-model="wiModal.defaultElement.wrapMode"
+                                            <select ng-model="wiModal.curveOptions.wrapMode"
                                                     name="wrapMode" id="wrapMode" value=""
                                                     class="form-control wi-form-control"
                                                     ng-options="item for item in wiModal.selectData.wrapMode track by item"></select>
@@ -107,7 +107,7 @@
                                     <div class="form-group">
                                         <label class="control-label col-sm-5 normal-text">Symbol Type</label>
                                         <div class="col-sm-7">
-                                            <select ng-model="wiModal.defaultElement.symbolType"
+                                            <select ng-model="wiModal.symbolOptions.symbolStyle.symbolName"
                                                     name="symbolType" id="symbolType" value=""
                                                     class="form-control wi-form-control"
                                                     ng-options="item for item in wiModal.selectData.symbolType track by item" disabled="true">
@@ -119,14 +119,14 @@
                                     <div class="form-group">
                                         <label class="control-label col-sm-5 normal-text">Block Position</label>
                                         <div class="col-sm-7">
-                                            <select ng-model="wiModal.defaultElement.blockPosition"
+                                            <select ng-model="wiModal.curveOptions.blockPosition"
                                                     name="blockPosition" value="" id="blockPosition"
                                                     class="form-control wi-form-control"
                                                     ng-options="item for item in wiModal.selectData.blockPosition track by item">
                                             </select>
                                         </div>
                                     </div>
-                                    <input type="checkbox" ng-model="ignore" id="ignore">Ignore Missing Values
+                                    <input type="checkbox" ng-model="wiModal.curveOptions.ignoreMissingValue" id="ignore">Ignore Missing Values
                                     <br>
                                     <div class="form-group">
                                         <label class="control-label col-sm-5 normal-text">Symbol Size</label>
@@ -134,7 +134,7 @@
                                             <input type="number" name="symbolSize" id="symbolSize"
                                                    min="1" max="50"
                                                    class="form-control wi-form-control"
-                                                   ng-model="wiModal.symbolOptions.symbolStyle.size"
+                                                   ng-model="wiModal.symbolOptions.symbolStyle.symbolSize"
                                                    ng-change="wiModal.changeOther();"
                                                    disabled="true">
                                         </div>
@@ -155,7 +155,7 @@
                                     <div class="form-group">
                                         <label class="control-label col-sm-5 normal-text">Log/Linear</label>
                                         <div class="col-sm-7">
-                                            <select ng-model="wiModal.curveOptions.logLinear"
+                                            <select ng-model="wiModal.curveOptions.displayType"
                                                     name="logLinear" value="" class="form-control wi-form-control"
                                                     ng-options="item for item in wiModal.selectData.logLinear track by item">
                                             </select>
@@ -174,7 +174,10 @@
                                     <div class="form-group">
                                         <label class="control-label col-sm-5 normal-text">Display As</label>
                                         <div class="col-sm-7">
-                                            <select ng-model="wiModal.defaultElement.displayAs" name="displayAs" value="" class="form-control wi-form-control" ng-options="item for item in wiModal.selectData.displayAs track by item"></select>
+                                            <select ng-model="wiModal.curveOptions.displayAs" 
+                                                    name="displayAs" value="" 
+                                                    class="form-control wi-form-control" 
+                                                    ng-options="item for item in wiModal.selectData.displayAs track by item"></select>
                                         </div>
                                     </div>
                                 </div>
