--- a/source/dialogs/symbol-style/symbol-style-modal.html
+++ b/source/dialogs/symbol-style/symbol-style-modal.html
@@ -15,19 +15,19 @@
                                         <div class="form-group">
                                             <label class="control-label col-sm-4 normal-text" for="style">Line Width</label>
                                             <div class="col-sm-8">
-                                                <ui-select theme="bootstrap" ng-model="wiModal.options.lines.width">
+                                                <ui-select theme="bootstrap" ng-model="wiModal.options.symbolStyle.symbolLineWidth">
                                                     <ui-select-match>
-                                                        <div class="col-sm-2 text-left">{{$select.selected.name}}</div>
+                                                        <div class="col-sm-2 text-left">{{$select.selected}}</div>
                                                         <svg height="10" width="100%" class="col-sm-10">
                                                             <line x1="0" y1="5" x2="100%" y2="5"
-                                                                  style="stroke: {{wiModal.options.lines.color}}; stroke-width: {{$select.selected.param}}"></line>
+                                                                  style="stroke: {{wiModal.options.symbolStyle.symbolStrokeStyle}}; stroke-width: {{$select.selected}}"></line>
                                                         </svg>
                                                     </ui-select-match>
                                                     <ui-select-choices repeat="width in wiModal.widthes">
-                                                        <div class="col-sm-2 text-left">{{width.name}}</div>
+                                                        <div class="col-sm-2 text-left">{{width}}</div>
                                                         <svg height="10" width="100%" class="col-sm-10">
                                                             <line x1="0" y1="5" x2="100%" y2="5"
-                                                                  style="stroke: {{wiModal.options.lines.color}}; stroke-width: {{width.param}}"></line>
+                                                                  style="stroke: {{wiModal.options.symbolStyle.symbolStrokeStyle}}; stroke-width: {{width}}"></line>
                                                         </svg>
                                                     </ui-select-choices>
                                                 </ui-select>
@@ -38,19 +38,19 @@
                                         <div class="form-group">
                                             <label class="control-label col-sm-4 normal-text" for="style">Line Style</label>
                                             <div class="col-sm-8">
-                                                <ui-select theme="bootstrap" ng-model="wiModal.options.lines.style">
+                                                <ui-select theme="bootstrap" ng-model="wiModal.options.symbolStyle.symbolLineDash">
                                                     <ui-select-match>
                                                         <svg height="10" width="100%" class="col-sm-12">
-                                                            <line x1="0" y1="5" x2="100%" y2="5" stroke-dasharray="{{$select.selected.param.join(',')}}"
-                                                                  style="stroke: {{wiModal.options.lines.color}}; stroke-width: 1}"></line>
+                                                            <line x1="0" y1="5" x2="100%" y2="5" stroke-dasharray="{{$select.selected.join(',')}}"
+                                                                  style="stroke: {{wiModal.options.symbolStyle.symbolStrokeStyle}}; stroke-width: 1}"></line>
                                                         </svg>
                                                     </ui-select-match>
                                                     <ui-select-choices repeat="style in wiModal.styles" class="text-left">
                                                         <div class="container-fluid">
                                                             <!--<div class="col-sm-2 text-left"></div>-->
                                                             <svg height="10" width="100%" class="col-sm-12">
-                                                                <line x1="0" y1="5" x2="100%" y2="5" stroke-dasharray="{{style.param.join(',')}}"
-                                                                      style="stroke: {{wiModal.options.lines.color}}; stroke-width: 1"></line>
+                                                                <line x1="0" y1="5" x2="100%" y2="5" stroke-dasharray="{{style.join(',')}}"
+                                                                      style="stroke: {{wiModal.options.symbolStyle.symbolStrokeStyle}}; stroke-width: 1"></line>
                                                             </svg>
                                                         </div>
 
@@ -65,8 +65,7 @@
                                             <div class="col-sm-8 text-left">
                                                 <input kendo-color-picker k-palette="'websafe'"
                                                        class="form-control wi-form-control"
-                                                       ng-model="wiModal.options.lines.color"/>
-                                                {{wiModal.options.lines.color}}
+                                                       ng-model="wiModal.options.symbolStyle.symbolStrokeStyle"/>
                                             </div>
                                         </div>
                                     </div>
@@ -85,14 +84,14 @@
                                                    class="form-control wi-form-control"
                                                    ng-model="wiModal.options.lines.color"/> -->
                                             <input type="color" name=""
-                                                    ng-model="wiModal.options.lines.color">
+                                                    ng-model="wiModal.options.symbolStyle.symbolFillStyle">
                                         </div>
                                     </div>
                                 </div>
                             </form>
                         </div>
                     </wi-tab>
-                    <wi-tab heading="Pattern">
+<!--                     <wi-tab heading="Pattern">
                         <div class="container-fluid">
                             <form action="" class="form-horizontal">
                                 <div class="row">
@@ -150,7 +149,7 @@
 
                             </form>
                         </div>
-                    </wi-tab>
+                    </wi-tab> -->
                 </wi-tabset>
             </div>
             <div class="modal-footer">
