--- a/source/dialogs/curve-properties/curve-properties-modal.html
+++ b/source/dialogs/curve-properties/curve-properties-modal.html
@@ -14,7 +14,7 @@
                                 <div class="form-group">
                                     <label class="control-label col-sm-3" for="wellName"><span class=""></span>Well</label>
                                     <div class="col-sm-9">
-                                        <input type="text" class="form-control wi-form-control" value="" id="wellName" name="wellName" ng-model="name" disabled>
+                                        <input type="text" class="form-control wi-form-control" value="" id="wellName" name="wellName" ng-model="wiModal.well.data.label" disabled>
                                     </div>
                                 </div>
                             </div>
@@ -88,7 +88,7 @@
                                     <div class="form-group">
                                         <label class="control-label col-sm-5 normal-text">Display mode</label>
                                         <div class="col-sm-7">
-                                            <select ng-model="wiModal.defaultElement.displayMode"
+                                            <select ng-model="wiModal.curveOptions.displayMode"
                                                     name="displayMode" id="displayMode" value=""
                                                     class="form-control wi-form-control"
                                                     ng-options="item for item in wiModal.selectData.displayMode track by item"
